@@ -8,6 +8,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,13 +18,24 @@ public class PerfilServiceImpl implements PerfilService {
     private final PerfilRepository perfilRepository;
 
     @Override
-    public List<PerfilDTO> getAll() {
-        return perfilRepository.findAll()
-                .stream()
-                .map(p -> new PerfilDTO(
-                        p.getId(),
-                        p.getNombre()
-                ))
-                .toList();
+    public List<PerfilDTO> findAllDTO() {
+        return perfilRepository.findAll().stream()
+                .map(p -> new PerfilDTO(p.getIdPerfil(), p.getNombre()))
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public Perfil save(Perfil perfil) {
+        return perfilRepository.save(perfil);
+    }
+
+    @Override
+    public Optional<Perfil> findById(int idPerfil) {
+        return perfilRepository.findById(idPerfil);
+    }
+
+    @Override
+    public void deleteById(int idPerfil) {
+        perfilRepository.deleteById(idPerfil);
     }
 }
