@@ -8,6 +8,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,13 +17,18 @@ public class UsuarioPerfilServiceImpl implements UsuarioPerfilService {
     private final UsuarioPerfilRepository usuarioPerfilRepository;
 
     @Override
-    public List<UsuarioPerfilDTO> getPerfilesByUsuario(String username) {
-        List<UsuarioPerfil> perfiles = usuarioPerfilRepository.findByUsuarioUsername(username);
-        return perfiles.stream()
+    public List<UsuarioPerfilDTO> findByUsername(String username) {
+        return usuarioPerfilRepository.findByUsuarioUsername(username)
+                .stream()
                 .map(up -> new UsuarioPerfilDTO(
+                        up.getId(),
                         up.getUsuario().getUsername(),
-                        up.getPerfil().getNombre()
-                ))
-                .toList();
+                        up.getPerfil().getIdPerfil()))
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public UsuarioPerfil save(UsuarioPerfil usuarioPerfil) {
+        return usuarioPerfilRepository.save(usuarioPerfil);
     }
 }
